--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </nav>
 
 <div id="body">
-<div class="container" id="Homepage">
+<div class="container" id="HomePage">
   <div class="centered">DESIGN</div> 
 </div>
 
