--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <div id="body">
 <div class="container" id="HomePage">
-  <div class="centered">DESIGN</div> 
+  <div class="centered">CSS</div> 
 </div>
 
 <div class="flexContainer" id="AboutUs">
