--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <div id="body">
 <div class="container" id="HomePage">
-  <div class="centered">DESIGN</div> 
+  <div class="centered">LANDING DESIGN</div> 
 </div>
 
 <div class="flexContainer" id="AboutUs">
